# cast

./: .gitignore  README.md  cast.py  pyproject.toml  requirements.txt  server.py
cast/: __main__.py  cast.py  config.py
cast/web/: index.html  style.css
config/: example.yml
