[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cast"
authors = [
    {name = "Ben Salter"},
]
description = "CAST provides a simple interface to communicate with Spotify."
readme = "README.md"
requires-python = ">=3.9"
version = "0.1"
dependencies = [
    "spotipy >= 2.24",
    "PyYAML >= 6.0.2",
]

[tool.setuptools]
packages = ["cast"]